--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -2,6 +2,7 @@ name: Templar_Casino
 main: me.PsionicTemplar.templarcasino.Start
 version: 0.1
 author: PsionicTemplar
+api-version: 1.13
 description: Casino Games Added in Vanilla Mincraft!
 commands:
   test:
